[tool.poetry]
name = "treeverse"
version = "0.1.0"
description = ""
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]
readme = "README.md"
packages = [{include = "treeverse"}]

[tool.poetry.scripts]
treeverse = "treeverse.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pydantic = "^2.7.4"
chardet = "^5.2.0"
python-magic = "^0.4.27"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
flake8 = "^7"
wemake-python-styleguide = "^0.19"
devtools = "^0.12"
pytest-cov = "^5.0.0"
coverage = "^7.5.2"
pytest = "^8.2.1"
hypothesis = "^6.102.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
